Revert "added computers and sessions table with associated endpoints."
This reverts commit 60d873d166ac9cb57683cc17c3d5ac824c8dbdee.
