# backend/app/routes/api.routes.js
@@ -1,9 +1,7 @@
-module.exports = (app) => {
-  const api = require("../controllers/api.controller.js");
-  var router = require("express").Router();
-  router.post("/api/login", api.login);
-  router.post("/api/restart/:id", api.restartPort);
-  router.post("/api/useComputer/", api.useComputer);
-  router.post("/api/releaseComputer/", api.releaseComputer);
-  app.use("", router);
+module.exports = app => {
+    const api = require("../controllers/api.controller.js");
+    var router = require("express").Router();
+    router.post("/api/login", api.login);
+    router.post("/api/restart/:id", api.restart);
+    app.use("", router);
 };
