# backend/app/routes/eventType.routes.js
@@ -1,8 +1,8 @@
 module.exports = (app) => {
   const event_types = require("../controllers/eventType.controller.js");
   var router = require("express").Router();
-  router.post("/api/eventTypes/", event_types.create);
-  router.get("/api/eventTypes/", event_types.findAll);
-  router.get("/api/eventTypes/:id", event_types.findOne);
+  router.post("/api/event_types/", event_types.create);
+  router.get("/api/event_types/", event_types.findAll);
+  router.get("/api/event_types/:id", event_types.findOne);
   app.use("", router);
 };
