# backend/server.js
@@ -3,17 +3,31 @@ const cors = require("cors");
 const bcrypt = require("bcrypt");
 require("dotenv").config();
 
-const swaggerUi = require("swagger-ui-express");
-const swaggerFile = require("./app/config/swagger_output.json");
+const swaggerUi = require('swagger-ui-express')
+const swaggerFile = require('./app/config/swagger_output.json')
 
 const app = express();
 var corsOptions = {
   origin: "http://localhost:3000",
 };
 
-const db = require("./app");
+const db = require("./app/models");
+const EventType = db.eventType;
+const Password = db.password;
 
-initializeDb();
+//The following is to wipe the database everytime.
+db.sequelize.sync({ force: true }).then(async () => {
+  console.log("Drop and re-sync db.");
+  //Order in which event types are created matters. See utils file for correct order.
+  EventType.create({ eventType: "login" });
+  EventType.create({ eventType: "admin login" });
+  EventType.create({ eventType: "changed password" });
+  EventType.create({ eventType: "changed admin password" });
+  hashedPassword = await bcrypt.hash("password", 10);
+  Password.create({ password: hashedPassword, isAdminPassword: 0 });
+  hashedPassword = await bcrypt.hash("adminpassword", 10);
+  Password.create({ password: hashedPassword, isAdminPassword: 1 });
+});
 
 app.use(cors(corsOptions));
 // parse requests of content-type - application/json
@@ -29,41 +43,10 @@ require("./app/routes/eventType.routes")(app);
 require("./app/routes/event.routes")(app);
 require("./app/routes/api.routes")(app);
 require("./app/routes/password.routes")(app);
-require("./app/routes/computer.routes")(app);
-require("./app/routes/session.routes")(app);
 // set port, listen for requests
 const PORT = process.env.PORT || 8080;
 app.listen(PORT, () => {
   console.log(`Server is running on port ${PORT}.`);
 });
 
-app.use("/doc", swaggerUi.serve, swaggerUi.setup(swaggerFile));
-
-async function initializeDb() {
-  const EventType = db.eventType;
-  const Password = db.password;
-  const Computer = db.computer;
-  //The following is to wipe the database everytime.
-  db.sequelize.sync({ force: true }).then(async () => {
-    console.log("Drop and re-sync db.");
-    //Order in which event types are created matters. See utils file for correct order.
-    await EventType.create({ eventType: "login" });
-    await EventType.create({ eventType: "admin login" });
-    await EventType.create({ eventType: "changed password" });
-    await EventType.create({ eventType: "changed admin password" });
-    await EventType.create({ eventType: "session start" });
-    await EventType.create({ eventType: "session end" });
-    //Password stuff.
-    hashedPassword = await bcrypt.hash("password", 10);
-    await Password.create({ password: hashedPassword, isAdminPassword: 0 });
-    hashedPassword = await bcrypt.hash("adminpassword", 10);
-    await Password.create({ password: hashedPassword, isAdminPassword: 1 });
-    //Computer stuff. inUse is false by default.
-    await Computer.create({ portId: 2, model: "Raspberry Pi 3 Model B+" });
-    await Computer.create({ portId: 3, model: "Raspberry Pi 3 Model B+" });
-    await Computer.create({ portId: 4, model: "Raspberry Pi 3 Model B+" });
-    await Computer.create({ portId: 5, model: "Raspberry Pi 3 Model B+" });
-    await Computer.create({ portId: 6, model: "Raspberry Pi 3 Model B+" });
-    await Computer.create({ portId: 7, model: "Raspberry Pi 3 Model B+" });
-  });
-}
+app.use('/doc', swaggerUi.serve, swaggerUi.setup(swaggerFile));
